# foss-cpp-fw

./: .gitignore  CMakeLists.txt  LICENSE  README  build-r.sh  build.sh  client.cmake.txt  install-deps.sh  sample-CMakeLists.txt  sample-build.sh  setup-hooks.sh
boglfw-eclipse/: .cproject  .project
data/fonts/: Cantarell.desc  DejaVuSans.desc
fosscppfw/amqp/: amqp-manager.cpp  amqp-manager.h  amqp.cpp  amqp.h
fosscppfw/net/: connection.h  net.cpp  result.h
fosscppfw/perf/: callGraph.cpp  callGraph.h  frameCapture.h  json.cpp  json.h  marker.h  perfPrint.cpp  perfPrint.h  results.cpp  section.h
fosscppfw/timers/: thread-timeout.h  time-exceeded-exception.h  timeout.h  timers.cpp  timers.h
fosscppfw/utils/: MTVector.h  ThreadLocalValue.cpp  ThreadLocalValue.h  ThreadPool.h  bitFlags.h  configFile.cpp  filesystem.cpp  filesystem.h  lockless-mt-map.h  log.cpp  log.h  parallel.h  rand.cpp  semaphore-acquire.h  semaphore-guard.h  semaphore-try-acquire.h  semaphore.h  strManip.cpp  strManip.h  strbld.h  unicode-file-reader.cpp  wstrconv.cpp  xchg.h
git-hooks/: pre-commit
include/boglfw/: Infrastructure.h  World.h
include/boglfw/GUI/: DefaultTheme.h  FillLayout.h  FreeLayout.h  GridLayout.h  GuiBasicElement.h  GuiContainerElement.h  GuiHelper.h  GuiSystem.h  GuiTheme.h  ICaptureManager.h  IGuiElement.h  Layout.h  ListLayout.h  SplitLayout.h  Window.h
include/boglfw/OSD/: EntityLabeler.h  Label.h  ScaleDisplay.h  SignalViewer.h
include/boglfw/entities/: Box.h  CameraController.h  Entity.h  Gizmo.h  PathController.h  enttypes.h
include/boglfw/input/: GLFWInput.h  InputEvent.h  SDLInput.h
include/boglfw/math/: aabb.h  box2glm.h  constants.h  math3D.h  transform.h
include/boglfw/net/: connection.h  listener.h  result.h  udp.h
include/boglfw/perf/: frameCapture.h  marker.h  perfPrint.h
include/boglfw/physics/: PhysContactListener.h  PhysDestroyListener.h  PhysicsBody.h  PhysicsDebugDraw.h
include/boglfw/renderOpenGL/: Camera.h  DefaultShaderPreprocessor.h  Framebuffer.h  GLText.h  IRenderable.h  Mesh.h  MeshRenderer.h  OffscreenRenderer.h  PictureDraw.h  RenderContext.h  RenderHelpers.h  Renderer.h  ShaderProgram.h  Shape2D.h  Shape3D.h  TextureLoader.h  UniformPack.h  UniformPackProxy.h  Viewport.h  ViewportCoord.h  drawable.h  glToolkit.h  shader.h
include/boglfw/serialization/: BinaryStream.h  Serializer.h  serializable.h
include/boglfw/utils/: DrawList.h  Event.h  FlexibleCoordinate.h  MTVector.h  log.h  (+13 more)
src/: Infrastructure.cpp  SpatialCache.cpp  World.cpp  main.cpp
src/GUI/: FillLayout.cpp  FreeLayout.cpp  GridLayout.cpp  GuiBasicElement.cpp  GuiContainerElement.cpp  GuiHelper.cpp  GuiSystem.cpp  GuiTheme.cpp  Layout.cpp  ListLayout.cpp  SplitLayout.cpp  Window.cpp
src/OSD/: EntityLabeler.cpp  Label.cpp  ScaleDisplay.cpp  SignalViewer.cpp
src/amqp/: amqp-manager.cpp  amqp-manager.h
src/entities/: Box.cpp  CameraController.cpp  Entity.cpp  Gizmo.cpp  PathController.cpp
src/input/: GLFWInput.cpp  SDLInput.cpp
src/math/: math3D.cpp  transform.cpp
src/net/: connection.h  listener.h  net.cpp  result.h  testnet.cpp
src/perf/: callGraph.cpp  callGraph.h  frameCapture.cpp  json.cpp  perfPrint.cpp  results.cpp  results.h  section.h
src/physics/: PhysContactListener.cpp  PhysDestroyListener.cpp  PhysicsBody.cpp  PhysicsDebugDraw.cpp
src/renderOpenGL/: Camera.cpp  DefaultShaderPreprocessor.cpp  Framebuffer.cpp  GLText.cpp  Mesh.cpp  MeshRenderer.cpp  OffscreenRenderer.cpp  PictureDraw.cpp  RenderContext.cpp  RenderHelpers.cpp  Renderer.cpp  ShaderProgram.cpp  Shape2D.cpp  Shape3D.cpp  TextureLoader.cpp  UniformPack.cpp  UniformPackProxy.cpp  Viewport.cpp  ViewportCoord.cpp  glToolkit.cpp  shader.cpp
src/serialization/: BigFile.cpp  BinaryStream.cpp  Serializer.cpp
src/utils/: Event.h  FlexibleCoordinate.cpp  MTVector.h  ThreadLocalValue.cpp  ThreadPool.cpp  ThreadPool.h  Timer.cpp  UpdateList.cpp  _strManip_private.h  arrayContainer.h  async-queue-detail.h  async-queue.h  cmdLine.cpp  cmdLine.h  configFile.cpp  configFile.h  filesystem.cpp  ioModif.h  log.cpp  rand.h  strManip.cpp  wstrconv.h
(+19 files in other folders)
